# TransformCopy

./: .gitignore  BUILD.md  CHANGES.md  CMakeLists.txt  INPUT_FIX.diff  Info.plist.in  QT_FIX_COMPLETE.md  QT_FIX_SUMMARY.md  QUICKSTART.md  README.md  build.sh  build_all.sh  package_release.sh
TransformCopy/: init.py  menu.py
TransformCopy/Nuke15/: TransformCopy.dylib
TransformCopy/Nuke16/: TransformCopy.dylib
source/: ToggleButtonKnob.h  ToggleButtonWidget.h  TransformCopy.cpp
